# bloggyblog

./: Cargo.toml  Dockerfile  README.md  articles_index.json  tailwind-styling.css
articles/: 10b82c98-0a50-4f31-a1fc-297456497735.md  19e2f394-20ba-4e00-9237-66ad458d54a2.md  29e91c7c-70d5-4922-b505-fafe156e5a4a.md  3d6898ca-2a48-4eb9-a77a-58c04dd1fa8b.md  40aacadf-ae71-4bc6-8c86-c0d533f9637e.md  6aef1337-da9d-42a3-a128-b399de0a176d.md  6d294d84-4ad4-4adc-b921-8405327d0f89.md  6f28caea-d4b2-44c2-99ab-8f9aa5438ab0.md  72496af2-ebd8-4d8e-9f23-31464166e7be.md  7778633d-82fc-4337-97c7-6ce972775a48.md  7ce90589-0776-47fa-96cc-cf7e591a9850.md  828c06d3-afc4-4e3d-9c10-5cfac91213da.md  8980343d-4f2b-4b73-b4b3-388758d5b359.md  8b27b618-047a-46b9-8b61-8afe43cea18b.md  8f7e6d5c-4b3a-2a1c-9d8e-7f6g5h4i3j2k.md  9337d53f-356a-4b25-b8dd-7eb994440197.md  93eba0cf-e2bd-4f16-987e-2b22f2b2f7fa.md  947a595b-bf61-4d44-973d-72a9c76d02ab.md  9a4afb3e-dfeb-4b1d-af62-12c12e0d1a3f.md  9d0678d7-8460-4757-b94e-bfe1567f9889.md  d54b4d6e-96e8-48cc-b5af-4370d24bd88e.md  e68d55ee-0f35-41d9-8dd5-c4228a905377.md  f53495ec-729f-4fd9-b8d1-8ae48bbce95b.md  index.json
images/: 676bd0d8-f472-4396-a388-0c4315539303.avif  index.json
src/: article.rs  config.rs  image.rs  index.rs  lib.rs  server.rs
templates/: article.html  articles.html  base.html  home.html  images.html
