[package]
name = "bloggyblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["headers"] }
axum-extra = "0.7.7"
bytes = { version = "1.5.0", features = ["serde"] }
cached = { version = "0.45.1", features = ["async"] }
clap = { version = "4.4.2", features = ["derive"] }
config = "0.13.3"
mime_guess = "2.0.4"
octocrab = "0.30.1"
reqwest = { version = "0.11.20", features = ["trust-dns", "rustls-tls", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
